--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
     <body>
     	<h2> Let's put it in an iframe!</h2>
-    	<iframe src="Leave_fig.html" title="Bubble plot" width = "80%" height = "80%" 
-    	frameBorder="0"></iframe> 
+		<div test_include_html = "bubbles.html"></div>
     </body>
 </html>
