--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
     </head>
 
     <body>
-    	<h2> Let's put it in an iframe!</h2>
-		<div test_include_html = "bubbles.html"></div>
+    	<h2>Categories Plot</h2>
+		<iframe src="categories.html"></iframe>
     </body>
+	<body>
+		<h2>Bubble Plot</h2>
+		<iframe src="bubbles.html"></iframe>
+	</body>
+	<body>
+		<h2>Map</h2>
+		<iframe src="map.html"></iframe>
+	</body>
 </html>
