--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+		<link rel="stylesheet" type="text/css" href="styles.css">
         <title>Test page</title>
         <style>
         	html {
@@ -19,14 +20,14 @@
 
     <body>
     	<h2>Categories Plot</h2>
-		<iframe src="categories.html"></iframe>
+		<iframe src="categories.html" width = 600 height=600></iframe>
     </body>
 	<body>
 		<h2>Bubble Plot</h2>
-		<iframe src="bubbles.html"></iframe>
+		<iframe src="bubbles.html" width = 600 height=600></iframe>
 	</body>
 	<body>
 		<h2>Map</h2>
-		<iframe src="map.html"></iframe>
+		<iframe src="map.html" width = 600 height=600></iframe>
 	</body>
 </html>
