--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
     </head>
 
     <body>
-		<iframe src="categories.html" title = "Categories Plot" width="600" height="600"></iframe>
+		<h2>Categories Plot</h2>
+		<iframe src="categories.html" width="600" height="600"></iframe>
+		<h2>Bubble Plot</h2>
+		<iframe src="bubbles.html" width="600" height="600"></iframe>
+		<h2>Map</h2>
+		<iframe src="map.html" width="600" height="600"></iframe>
     </body>
-	<body>
-		<iframe src="bubbles.html" title = "Bubble Plot" width="600" height="600"></iframe>
-	</body>
-	<body>
-		<iframe src="map.html" title = "Map" width="600" height="600"></iframe>
-	</body>
 </html>
