Chagned css, added paragraphs

--- a/index.html
+++ b/index.html
@@ -19,11 +19,23 @@
     </head>
 
     <body>
-		<h2>Categories Plot</h2>
-		<iframe src="categories.html" width="600" height="600"></iframe>
-		<h2>Bubble Plot</h2>
-		<iframe src="bubbles.html" width="600" height="600"></iframe>
-		<h2>Map</h2>
-		<iframe src="map.html" width="600" height="600"></iframe>
+		<h2>Voting frequency vs Income and Education</h2>
+		<p><iframe src="categories.html" width="1000" height="800"></iframe></p>
+		<p class="text">There seems to be a positive relationship between income and education. As education increases, so does average income.<br>
+			There are very few college educated people who make less than $40k and there are very few High school or less educated people who make more than $125k. <br>
+			A majority of those making $125k or more are college educated, and a majority of those making $75k-125k have some college education or more. 
+			Whereas a majority of people making less than $40k are high school or less educated.</p>
+			<br>
+
+		<h2>Voter Turnout Percetage vs Absentee Percentage Over Time</h2>
+		<p><iframe src="bubbles.html" width="750" height="650"></iframe></p>
+		<p class="text">2020 is widely different from other years, due to the lockdowns from COVID-19, the amount of absentee voters increased dramatically, and we can still see effects from that even in 2021 where the lockdowns were lessened.</p>
+		<br>
+
+		<h2>Map of Virginia</h2>
+		<p><iframe src="map.html" width="800" height="800"></iframe></p>
+		<p class="text">Cities tend to have lower voter turnout.<br> Lynchburg only has 47%, Charlottesville has 51% and Richmond, the capital, only has 47%, 
+			these are all lower than their surrounding counties, which is an interesting trend. </p>
+			<br>
     </body>
 </html>
