--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 		<link rel="stylesheet" type="text/css" href="styles.css">
-        <title>Test page</title>
+        <title>Data Interactivity</title>
         <style>
         	html {
 				margin: 0;
