--- a/index.html
+++ b/index.html
@@ -1,41 +1,77 @@
 <!DOCTYPE html>
-<html>
-    <head>
-		<link rel="stylesheet" type="text/css" href="styles.css">
-        <title>Data Interactivity</title>
-        <style>
-        	html {
-				margin: 0;
-				padding: 0;
-				height: 100%;
-			}
-			body { 
-				font: 100% georgia, sans-serif;
-				line-height: 1.8em;
-				color: #555753; 
-				height:100%
-			}
-		</style>
-    </head>
+<html lang="en">
+<head>
+<title>CSS Template</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
 
-    <body>
-		<h2>Voting frequency vs Income and Education</h2>
-		<p><iframe src="categories.html" width="1000" height="800"></iframe></p>
-		<p class="text">There seems to be a positive relationship between income and education. As education increases, so does average income.<br>
-			There are very few college educated people who make less than $40k and there are very few High school or less educated people who make more than $125k. <br>
-			A majority of those making $125k or more are college educated, and a majority of those making $75k-125k have some college education or more. 
-			Whereas a majority of people making less than $40k are high school or less educated.</p>
-			<br>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-		<h2>Voter Turnout Percetage vs Absentee Percentage Over Time</h2>
-		<p><iframe src="bubbles.html" width="750" height="650"></iframe></p>
-		<p class="text">2020 is widely different from other years, due to the lockdowns from COVID-19, the amount of absentee voters increased dramatically, and we can still see effects from that even in 2021 where the lockdowns were lessened.</p>
-		<br>
+/* Style the header */
+.header {
+  background-color: #f1f1f1;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+}
 
-		<h2>Map of Virginia</h2>
-		<p><iframe src="map.html" width="800" height="800"></iframe></p>
-		<p class="text">Cities tend to have lower voter turnout.<br> Lynchburg only has 47%, Charlottesville has 51% and Richmond, the capital, only has 47%, 
-			these are all lower than their surrounding counties, which is an interesting trend. </p>
-			<br>
-    </body>
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the footer */
+.footer {
+  background-color: #f1f1f1;
+  padding: 10px;
+  text-align: center;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<h2>CSS Template using Float</h2>
+<p>In this example, we have created a header, three equal columns and a footer. On smaller screens, the columns will stack on top of each other.</p>
+<p>Resize the browser window to see the responsive effect.</p>
+
+<div class="header">
+  <h2>Header</h2>
+</div>
+
+<div class="row">
+  <div class="column" style="background-color:#aaa;">Column</div>
+  <div class="column" style="background-color:#bbb;">Column</div>
+  <div class="column" style="background-color:#ccc;">Column</div>
+</div>
+
+<div class="footer">
+  <p>Footer</p>
+</div>
+
+</body>
 </html>
+
+
