--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<p>
 				This was built using tensorflow's embedding <a href="https://www.tensorflow.org/tensorboard/tensorboard_projector_plugin"> projector</a>.
 			</p>
-		<embed src="http://projector.tensorflow.org/?config=https://gist.githubusercontent.com/cgra21/8724531086105e3ff2911466b579ffad/raw/63bfee9a830058b48335e6f6187695355a5d9a51/projector_config.json" width="1800" height="1200"></embed>
+		<embed src="http://projector.tensorflow.org/?config=https://gist.githubusercontent.com/cgra21/8724531086105e3ff2911466b579ffad/raw/63bfee9a830058b48335e6f6187695355a5d9a51/projector_config.json" style="width: 1200px; height: 800px;">
 
 		<div class="requirements">
 			<h3>Conclusion</h3>
