--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			</p>
 		<footer>
 		<a href="http://projector.tensorflow.org/?config=https://gist.githubusercontent.com/cgra21/8724531086105e3ff2911466b579ffad/raw/63bfee9a830058b48335e6f6187695355a5d9a51/projector_config.json" title = "View 3D embedding Visualization" class="zen-github">View the Embedding</a>
-		<p>For security reasons, the projector cannot be displayed on this page</p>
+		<p>For security reasons, the projector cannot be displayed on this page. This is because it does not use https</p>
 		</footer>
 		<div class="requirements">
 			<h3>Conclusion</h3>
