--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 				This visualization shows just how different news sources can be. An interesting find, if you notice, buzzfeed articles tend to cluster extremely close togther. Another interesting find is that topic seems to be a bigger 
 				feature than authorship. It is worth further investigation to seperate those two features and see how much of a difference they make. Overall, there is some distinction between articles, however, this project doesn't decern exactly where they come from.
 				It could be topic, author or even formatting. While it's an interesting visualization, a much more deep dive is need to fully understand the differences between publications, as well as what makes the news.
+
+				The CSS for this cite was adapted from <a href="https://www.csszengarden.com/218/">here</a>
 			</p>
 		</div>
 
